tests/negative/parser/err_compute_no_bindings.ual
-- Parser error test: invalid compute block syntax
@stack = stack.new(i64)
@stack push(5)

@stack {
}.compute({
    -- missing bindings |...|
    return x
})
